update algorithm for extration of image

--- a/extract_data.ipynb
+++ b/extract_data.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,15 +42,15 @@
     "    rvec_matrix = cv2.Rodrigues(rvec)[0]\n",
     "    proj_matrix = np.hstack((rvec_matrix, tvec.T))\n",
     "    eulerAngles = cv2.decomposeProjectionMatrix(proj_matrix)[6]\n",
-    "\n",
+    "    \n",
     "    #print(eulerAngles)\n",
     "    yaw   = eulerAngles[1]\n",
     "    pitch = eulerAngles[0]\n",
     "    roll  = eulerAngles[2]\n",
-    "    if roll > 0:\n",
-    "        roll = 180 - roll  \n",
-    "    elif roll < 0:\n",
-    "        roll = -180 - roll \n",
+    "#     if roll > 0:\n",
+    "#         roll = 180 - roll  \n",
+    "#     elif roll < 0:\n",
+    "#         roll = -180 - roll \n",
     "    yaw = -yaw\n",
     "\n",
     "    #angle = (angle + 720) % 360\n",
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,271 +70,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n",
-      "(1080, 1920, 3)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "cv_file = cv2.FileStorage(CAMERA_INFO, cv2.FILE_STORAGE_READ)\n",
     "\n",
@@ -347,14 +85,16 @@
     "fourcc = cv2.VideoWriter_fourcc(*'XVID')\n",
     "video_writer = cv2.VideoWriter(\"output.avi\", fourcc, 20, (1080, 1920))\n",
     "    \n",
+    "count = 0\n",
+    "\n",
     "while(True):\n",
     "    # Capture frame-by-frame\n",
     "    ret, frame = cap.read()\n",
-    "  \n",
+    "\n",
+    "    \n",
     "    # Rotate -90 \n",
-    "    rows, cols = frame.shape[:2] \n",
-    "    M= cv2.getRotationMatrix2D((cols/2, rows/2), -90, 0.5)\n",
-    "    frame = cv2.warpAffine(frame, M,(cols, rows))\n",
+    "    frame = np.transpose(frame, axes=(1,0,2)).astype(np.uint8).copy() \n",
+    "    frame = cv2.flip(frame, 1)\n",
     "    \n",
     "    # change image for gray image processing\n",
     "    gray = cv2.cvtColor(frame, cv2.COLOR_BGR2GRAY)\n",
@@ -368,32 +108,48 @@
     "    corners, ids, rejectedImgPoints = aruco.detectMarkers(gray, aruco_dict, parameters=parameters)\n",
     "\n",
     "    # calculate attitude if marker is found.\n",
-    "    if np.all(ids != None) :  \n",
+    "    if np.all(ids == 2) :  \n",
+    "        \n",
     "        rvec, tvec, _ = aruco.estimatePoseSingleMarkers(corners[0], 0.1, mtx, dist)\n",
     "        \n",
     "        roll, pitch, yaw = attitude(rvec[0], tvec[0])\n",
+    "#         print(rvec[0])\n",
+    "#         print(roll + 90, pitch, yaw)\n",
+    "        angle = handle2steering(roll+90)\n",
     "\n",
     "        aruco.drawAxis(frame, mtx, dist, rvec[0], tvec[0], 0.01)\n",
     "        aruco.drawDetectedMarkers(frame, corners)\n",
+    "    else  :\n",
+    "        continue\n",
     "\n",
-    "    print(frame.shape)\n",
-    "    # display image\n",
-    "    left = 800\n",
-    "    top = 80\n",
-    "    width = 300\n",
-    "    height = 300\n",
+    "    left = 200\n",
+    "    top = 50\n",
+    "    width = 600\n",
+    "    height = 600\n",
+    "\n",
+    "    \n",
+    "    # save the image (image_[num]_[angle].png)\n",
+    "    crop_img =  frame[top:top+height, left:left+width]\n",
+    "    fn = \"data/image_%04d_%.2f.png\" % (count, angle)\n",
+    "    cv2.imwrite( fn, crop_img );\n",
+    "\n",
+    "    \n",
+    "    # display image to save \n",
     "    cv2.rectangle(frame,(left,top),(left+width,top+height),(0,0,255),3)\n",
     "    \n",
+    "    \n",
     "    # display steering angle\n",
-    "    str = \"%f\"%(handle2steering(-roll-90))\n",
+    "    str = \"%f\"%(roll+90)\n",
     "    font = cv2.FONT_HERSHEY_SIMPLEX\n",
     "    cv2.putText(frame, str,(700,500), font, 1,(255,255,255),2,cv2.LINE_AA)\n",
     "    \n",
     "    # display the resulting frame\n",
-    "    video_writer.write(frame)\n",
+    "    #video_writer.write(frame)\n",
     "    cv2.imshow('frame', frame)\n",
     "    if cv2.waitKey(1) & 0xFF == ord('q'):\n",
-    "        break\n",
+    "       break\n",
+    "    \n",
+    "    count += 1\n",
     "\n",
     "# when everything done, release the capture\n",
     "video_writer.release()\n",
@@ -401,6 +157,13 @@
     "cv2.destroyAllWindows()\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
