--- a/extract_data.ipynb
+++ b/extract_data.ipynb
@@ -23,18 +23,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Video data\n",
-    "TEST_PATH = '/home/stmoon/Video/CarData2/test.mp4'  \n",
+    "TEST_PATH = '/home/stmoon/Video/CarData3/20181102_163625.mp4'\n",
     "CAMERA_INFO = './camera.yaml'\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,22 +115,22 @@
     "        roll, pitch, yaw = attitude(rvec[0], tvec[0])\n",
     "#         print(rvec[0])\n",
     "#         print(roll + 90, pitch, yaw)\n",
-    "        angle = handle2steering(roll+90)\n",
+    "        angle = handle2steering(roll+180)\n",
     "\n",
     "        aruco.drawAxis(frame, mtx, dist, rvec[0], tvec[0], 0.01)\n",
     "        aruco.drawDetectedMarkers(frame, corners)\n",
     "    else  :\n",
     "        continue\n",
     "\n",
-    "    left = 200\n",
-    "    top = 50\n",
+    "    left = 250\n",
+    "    top = 300\n",
     "    width = 600\n",
-    "    height = 600\n",
+    "    height = 500\n",
     "\n",
     "    \n",
     "    # save the image (image_[num]_[angle].png)\n",
     "    crop_img =  frame[top:top+height, left:left+width]\n",
-    "    fn = \"data/image_%04d_%.2f.png\" % (count, angle)\n",
+    "    fn = \"data/out2/image_%04d_%.2f.png\" % (count, angle)\n",
     "    cv2.imwrite( fn, crop_img );\n",
     "\n",
     "    \n",
@@ -139,7 +139,7 @@
     "    \n",
     "    \n",
     "    # display steering angle\n",
-    "    str = \"%f\"%(roll+90)\n",
+    "    str = \"%f\"%(roll+180)\n",
     "    font = cv2.FONT_HERSHEY_SIMPLEX\n",
     "    cv2.putText(frame, str,(700,500), font, 1,(255,255,255),2,cv2.LINE_AA)\n",
     "    \n",
