--- a/extract_data.ipynb
+++ b/extract_data.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,8 +69,64 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### search cross point of two lines \n",
+    "- refer : http://www.gisdeveloper.co.kr/?p=89\n",
+    "\n",
+    "- equation\n",
+    "![](http://www.gisdeveloper.co.kr/wp-content/uploads/1/884485.gif)\n",
+    "\n",
+    "- parameter\n",
+    "\n",
+    "![](http://www.gisdeveloper.co.kr/wp-content/uploads/1/267312.gif)\n",
+    "\n",
+    "- 교점\n",
+    "![](http://www.gisdeveloper.co.kr/wp-content/uploads/1/656905.gif)\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def centerMarker(corners) :\n",
+    "    p1 = corners[0][0][0]\n",
+    "    p2 = corners[0][0][2]\n",
+    "    p3 = corners[0][0][1]\n",
+    "    p4 = corners[0][0][3]\n",
+    "    \n",
+    "    x1,y1 = p1\n",
+    "    x2,y2 = p2\n",
+    "    x3,y3 = p3\n",
+    "    x4,y4 = p4\n",
+    "    \n",
+    "    t = ((x4-x3)*(y1-y3)-(y4-y3)*(x1-x3)) / ((y4-y3)*(x2-x1)-(x4-x3)*(y2-y1))\n",
+    "    s = ((x2-x1)*(y1-y3)-(y2-y1)*(x1-x3)) / ((y4-y3)*(x2-x1)-(x4-x3)*(y2-y1))\n",
+    "    \n",
+    "    cx = x1 + s*(x2-x1)\n",
+    "    cy = y1 + s*(y2-y1)\n",
+    "    \n",
+    "    return (int(cx),int(cy))\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "OFFSET = 180\n",
+    "isSave = False\n",
+    "isDisplay = True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,52 +158,52 @@
     "\n",
     "    # aruco information\n",
     "    aruco_dict = aruco.Dictionary_get(aruco.DICT_4X4_100)\n",
-    "    parameters =  aruco.DetectorParameters_create()\n",
+    "    parameters =  aruco.DetectorParameters_create()  \n",
+    "    \n",
     "\n",
     "    # lists of ids and the corners beloning to each id\n",
     "    corners, ids, rejectedImgPoints = aruco.detectMarkers(gray, aruco_dict, parameters=parameters)\n",
-    "\n",
+    "    cx,cy = 0,0\n",
     "    # calculate attitude if marker is found.\n",
     "    if np.all(ids == 2) :  \n",
-    "        \n",
-    "        rvec, tvec, _ = aruco.estimatePoseSingleMarkers(corners[0], 0.1, mtx, dist)\n",
-    "        \n",
+    "        rvec, tvec, _ = aruco.estimatePoseSingleMarkers(corners[0], 0.1, mtx, dist)        \n",
     "        roll, pitch, yaw = attitude(rvec[0], tvec[0])\n",
-    "#         print(rvec[0])\n",
-    "#         print(roll + 90, pitch, yaw)\n",
     "        angle = handle2steering(roll+180)\n",
     "\n",
     "        aruco.drawAxis(frame, mtx, dist, rvec[0], tvec[0], 0.01)\n",
     "        aruco.drawDetectedMarkers(frame, corners)\n",
+    "\n",
+    "        cx,cy = centerMarker(corners)\n",
+    "        \n",
     "    else  :\n",
     "        continue\n",
-    "\n",
-    "    left = 250\n",
-    "    top = 300\n",
-    "    width = 600\n",
+    "    \n",
+    "    left = cx - 150\n",
+    "    top = cy - 1050\n",
+    "    width = 700\n",
     "    height = 500\n",
     "\n",
-    "    \n",
     "    # save the image (image_[num]_[angle].png)\n",
-    "    crop_img =  frame[top:top+height, left:left+width]\n",
-    "    fn = \"data/out2/image_%04d_%.2f.png\" % (count, angle)\n",
-    "    cv2.imwrite( fn, crop_img );\n",
+    "    if isSave :\n",
+    "        crop_img =  frame[top:top+height, left:left+width]\n",
+    "        fn = \"data/out2/image_%04d_%.2f.png\" % (count, angle)\n",
+    "        cv2.imwrite( fn, crop_img );\n",
     "\n",
-    "    \n",
     "    # display image to save \n",
-    "    cv2.rectangle(frame,(left,top),(left+width,top+height),(0,0,255),3)\n",
+    "    if isDisplay :\n",
+    "        cv2.rectangle(frame,(left,top),(left+width,top+height),(0,0,255),3)    \n",
+    "        cv2.rectangle(frame,(cx,cy),(cx+10,cy+10),(0,0,255),3)\n",
+    "        \n",
+    "        # display steering angle\n",
+    "        str = \"%f\"%(roll+180)\n",
+    "        font = cv2.FONT_HERSHEY_SIMPLEX\n",
+    "        cv2.putText(frame, str,(700,500), font, 1,(255,255,255),2,cv2.LINE_AA)\n",
     "    \n",
-    "    \n",
-    "    # display steering angle\n",
-    "    str = \"%f\"%(roll+180)\n",
-    "    font = cv2.FONT_HERSHEY_SIMPLEX\n",
-    "    cv2.putText(frame, str,(700,500), font, 1,(255,255,255),2,cv2.LINE_AA)\n",
-    "    \n",
-    "    # display the resulting frame\n",
-    "    #video_writer.write(frame)\n",
-    "    cv2.imshow('frame', frame)\n",
-    "    if cv2.waitKey(1) & 0xFF == ord('q'):\n",
-    "       break\n",
+    "        # display the resulting frame\n",
+    "        #video_writer.write(frame)\n",
+    "        cv2.imshow('frame', frame)\n",
+    "        if cv2.waitKey(1) & 0xFF == ord('q'):\n",
+    "           break\n",
     "    \n",
     "    count += 1\n",
     "\n",
