--- a/extract_data.ipynb
+++ b/extract_data.ipynb
@@ -23,13 +23,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Video data\n",
     "TEST_PATH = '/home/stmoon/Video/CarData3/20181102_163625.mp4'\n",
-    "CAMERA_INFO = './camera.yaml'\n"
+    "TEST_PATH = '/home/stmoon/Data/car/20181102_163625.mp4'\n",
+    "CAMERA_INFO = './camera.yaml'\n",
+    "OFFSET = 180\n",
+    "isSave = False\n",
+    "isDisplay = True"
    ]
   },
   {
@@ -115,17 +119,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "OFFSET = 180\n",
-    "isSave = False\n",
-    "isDisplay = True"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 56,
    "metadata": {},
    "outputs": [],
@@ -168,7 +161,7 @@
     "    if np.all(ids == 2) :  \n",
     "        rvec, tvec, _ = aruco.estimatePoseSingleMarkers(corners[0], 0.1, mtx, dist)        \n",
     "        roll, pitch, yaw = attitude(rvec[0], tvec[0])\n",
-    "        angle = handle2steering(roll+180)\n",
+    "        angle = handle2steering(roll+OFFSET)\n",
     "\n",
     "        aruco.drawAxis(frame, mtx, dist, rvec[0], tvec[0], 0.01)\n",
     "        aruco.drawDetectedMarkers(frame, corners)\n",
@@ -195,7 +188,7 @@
     "        cv2.rectangle(frame,(cx,cy),(cx+10,cy+10),(0,0,255),3)\n",
     "        \n",
     "        # display steering angle\n",
-    "        str = \"%f\"%(roll+180)\n",
+    "        str = \"%f\"%(roll+OFFSET)\n",
     "        font = cv2.FONT_HERSHEY_SIMPLEX\n",
     "        cv2.putText(frame, str,(700,500), font, 1,(255,255,255),2,cv2.LINE_AA)\n",
     "    \n",
